--- a/contact.html
+++ b/contact.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact</title>
+    <title>Kontact</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header>
-      <h1>Text</h1>
-      <nav class="main-nav">
-        <div>
-          <a href="./index.html">Home</a>
-        </div>
-        <div class="active">
-          <a href="./contact.html">Contact</a>
-        </div>
-        <div>
-          <a href="./pictures.html"> Pictures</a>
-        </div>
+      <nav class="main-nav" href="./index.html">
+        <a class="inActive" href="./index.html">Hem</a>
+
+        <a class="active" href="./contact.html">Kontakta oss</a>
+
+        <a class="inActive" href="./pictures.html"> Bilder</a>
       </nav>
     </header>
-    <h1>Please do not spam my inbox!!!</h1>
+    <h1>Hör av er med frågor här:</h1>
+    <a
+      class="mail"
+      href="mailto:max.cardell.wasserman@skola.botkyrka.se?subject=Om spelet"
+    ></a>
+
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut ipsam
       repellat soluta ex adipisci. Perferendis magnam adipisci provident. Minus,
