--- a/index.html
+++ b/index.html
@@ -1,81 +1,113 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="se">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Hem</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header>
-      <h1>Text</h1>
       <nav class="main-nav">
-        <div class="active">
-          <a href="./index.html">Home</a>
-        </div>
-        <div>
-          <a href="./contact.html">Contact</a>
-        </div>
-        <div>
-          <a href="./pictures.html"> Pictures</a>
-        </div>
+        <a class="active" href="./index.html">Hem</a>
+        <a class="inActive" href="./guide.html">Guide</a>
+
+        <a class="inActive" href="./download.html">Ladda ner spelet</a>
+
+        <a class="inActive" href="./contact.html">Kontakta oss</a>
+
+        <a class="inActive" href="./pictures.html">Galleri</a>
       </nav>
     </header>
-
+    <h1>Rule of Division</h1>
+    <div class="quickLinks">
+      <h3>Överblick</h3>
+      <ul>
+        <!--gör de här till genvägar-->
+        <a href="#intro">Introduktion</a>
+      </ul>
+      <ul>
+        <a href="#vadLär">Vad lär vi ut? </a>
+      </ul>
+      <ul>
+        <a href="#undervisning">Hur passar vi in i undervisningen?</a>
+      </ul>
+    </div>
+    <h3 id="intro">Vad handlar spelet om?</h3>
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, fugit
-      provident, rem voluptatibus maxime recusandae tempora corrupti neque
-      suscipit ea perferendis magni adipisci explicabo dignissimos quasi
-      laudantium repudiandae labore illum repellendus enim alias asperiores.
-      Sunt iure earum quae est dolorem eligendi laboriosam id tempora
-      reiciendis, quis et, quasi eaque doloribus illum provident facilis,
-      voluptatum ex. Dicta, ipsam laboriosam quod eligendi ea sunt fugit iste
-      dolorem, natus at, consequuntur pariatur dolores quasi necessitatibus
-      sapiente quia sed dolor ratione! Necessitatibus nam numquam, consectetur
-      optio cumque molestias dolorum vitae nobis in quos, odit corporis hic
-      placeat neque cum dolorem excepturi officiis voluptatem, eius consequatur
-      at omnis assumenda. Officiis, rerum dolores! Nisi saepe quas pariatur nemo
-      debitis praesentium suscipit nesciunt mollitia quidem soluta, ullam animi,
-      rem cupiditate? Natus mollitia, totam maxime optio ducimus alias nemo?
-      Excepturi asperiores illo minus libero delectus tempora aliquid voluptatum
-      ratione magnam nulla enim accusamus, quos ad inventore adipisci ducimus
-      vitae aspernatur temporibus at ab incidunt perspiciatis porro id?
-      Aspernatur harum qui, amet velit nulla odio error adipisci esse molestiae
-      dolorum laborum quod neque labore repellendus facilis molestias voluptate
-      fugiat incidunt iste numquam voluptatibus dolor eos quas? Nihil maxime
-      animi amet hic eius nulla quos laudantium. Earum, ratione alias explicabo,
-      maxime nam, blanditiis illo laudantium perspiciatis nisi molestias harum
-      impedit. Facere quae molestiae labore! Voluptas odio eum laboriosam ex
-      iste tenetur doloribus ab inventore eveniet repellendus quis accusamus
-      dignissimos enim repellat facere modi hic, cupiditate veniam qui omnis?
-      Dolore dolor doloremque quaerat nostrum sunt iure blanditiis facere earum
-      aperiam voluptatem. Iure maiores suscipit sapiente porro perspiciatis at
-      dolorum voluptatibus minus similique. Eos aperiam dignissimos unde magni
-      adipisci id debitis, nam delectus corporis ad fugiat ullam iusto repellat
-      nihil deleniti, dolor voluptatem culpa earum consequuntur. Perspiciatis
-      eligendi tempora ducimus voluptate ut consectetur voluptas quaerat
-      explicabo amet ipsum dolores veniam, labore, qui exercitationem similique
-      deleniti minus excepturi blanditiis cum, repellendus illo quis veritatis
-      nam facilis. Atque, odit asperiores? Praesentium fugit dolor expedita
-      nihil, necessitatibus magnam molestiae optio a totam accusantium molestias
-      officiis et recusandae mollitia quod nesciunt, illum ducimus deleniti
-      autem maxime aut dicta! Accusantium eveniet quam aliquid! Dignissimos
-      animi eaque debitis et illum quasi repellendus, deserunt sed nulla dicta
-      autem minus rem modi qui quis doloremque quibusdam inventore suscipit
-      accusamus. Dolor, optio facilis. Maxime ea repellat, consequatur, sit
-      temporibus aliquam a similique harum doloribus blanditiis optio. Dicta
-      quidem sequi rerum et sed placeat id necessitatibus corporis debitis!
-      Natus aut magni temporibus odit recusandae minima iusto. Hic eligendi
-      consequatur quis quibusdam distinctio pariatur inventore alias libero
-      rerum eaque minima fuga voluptate odit officia, velit facere eius ullam
-      repellendus eum. Voluptatem rerum mollitia, explicabo illo expedita
-      soluta! Placeat eum, fugiat porro accusamus ipsum magnam laborum qui nobis
-      molestiae magni eveniet doloribus, repudiandae facilis voluptatem dolores
-      asperiores? Nam delectus harum eligendi hic voluptatum tempore quibusdam,
-      minima perspiciatis ea ipsam repellendus ut beatae eaque nisi quidem
-      eveniet, explicabo veniam doloremque libero provident, tenetur assumenda
-      saepe temporibus possimus! Consequatur earum facere fugit dolor delectus
+      "Rule of Division" är ett roligt sätt för grundskoleelever att lära sig
+      division. Man lär sig genom att dela tal jämnt genom att hugga monster med
+      svärd.
+    </p>
+    <div class="image">
+      <img src="./Bilder/Skarmbild_3.png" alt="1st Game image" />
+    </div>
+    <h3 id="vadLär">Vad lär vi ut?</h3>
+    <p>
+      Vi lär ut räknesättet division på en mellanstadienivå. Eleverna kommer att
+      lära sig vilka tal som kan delas jämnt av varandra. De kommer till att
+      börja med lära sig sambandet mellan multiplikation och division. De kommer
+      att få olika svårighetsnivåer att välja
+    </p>
+    <div class="image">
+      <img src="./Bilder/Division_begrepp.png" alt="2nd image" />
+    </div>
+    <h3 id="undervisning">Hur passar vi in i undervisningen?</h3>
+    <p>
+      Vi kan Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      Voluptatum, fugit provident, rem voluptatibus maxime recusandae tempora
+      corrupti neque suscipit ea perferendis magni adipisci explicabo
+      dignissimos quasi laudantium repudiandae labore illum repellendus enim
+      alias asperiores. Sunt iure earum quae est dolorem eligendi laboriosam id
+      tempora reiciendis, quis et, quasi eaque doloribus illum provident
+      facilis, voluptatum ex. Dicta, ipsam laboriosam quod eligendi ea sunt
+      fugit iste dolorem, natus at, consequuntur pariatur dolores quasi
+      necessitatibus sapiente quia sed dolor ratione! Necessitatibus nam
+      numquam, consectetur optio cumque molestias dolorum vitae nobis in quos,
+      odit corporis hic placeat neque cum dolorem excepturi officiis voluptatem,
+      eius consequatur at omnis assumenda. Officiis, rerum dolores! Nisi saepe
+      quas pariatur nemo debitis praesentium suscipit nesciunt mollitia quidem
+      soluta, ullam animi, rem cupiditate? Natus mollitia, totam maxime optio
+      ducimus alias nemo? Excepturi asperiores illo minus libero delectus
+      tempora aliquid voluptatum ratione magnam nulla enim accusamus, quos ad
+      inventore adipisci ducimus vitae aspernatur temporibus at ab incidunt
+      perspiciatis porro id? Aspernatur harum qui, amet velit nulla odio error
+      adipisci esse molestiae dolorum laborum quod neque labore repellendus
+      facilis molestias voluptate fugiat incidunt iste numquam voluptatibus
+      dolor eos quas? Nihil maxime animi amet hic eius nulla quos laudantium.
+      Earum, ratione alias explicabo, maxime nam, blanditiis illo laudantium
+      perspiciatis nisi molestias harum impedit. Facere quae molestiae labore!
+      Voluptas odio eum laboriosam ex iste tenetur doloribus ab inventore
+      eveniet repellendus quis accusamus dignissimos enim repellat facere modi
+      hic, cupiditate veniam qui omnis? Dolore dolor doloremque quaerat nostrum
+      sunt iure blanditiis facere earum aperiam voluptatem. Iure maiores
+      suscipit sapiente porro perspiciatis at dolorum voluptatibus minus
+      similique. Eos aperiam dignissimos unde magni adipisci id debitis, nam
+      delectus corporis ad fugiat ullam iusto repellat nihil deleniti, dolor
+      voluptatem culpa earum consequuntur. Perspiciatis eligendi tempora ducimus
+      voluptate ut consectetur voluptas quaerat explicabo amet ipsum dolores
+      veniam, labore, qui exercitationem similique deleniti minus excepturi
+      blanditiis cum, repellendus illo quis veritatis nam facilis. Atque, odit
+      asperiores? Praesentium fugit dolor expedita nihil, necessitatibus magnam
+      molestiae optio a totam accusantium molestias officiis et recusandae
+      mollitia quod nesciunt, illum ducimus deleniti autem maxime aut dicta!
+      Accusantium eveniet quam aliquid! Dignissimos animi eaque debitis et illum
+      quasi repellendus, deserunt sed nulla dicta autem minus rem modi qui quis
+      doloremque quibusdam inventore suscipit accusamus. Dolor, optio facilis.
+      Maxime ea repellat, consequatur, sit temporibus aliquam a similique harum
+      doloribus blanditiis optio. Dicta quidem sequi rerum et sed placeat id
+      necessitatibus corporis debitis! Natus aut magni temporibus odit
+      recusandae minima iusto. Hic eligendi consequatur quis quibusdam
+      distinctio pariatur inventore alias libero rerum eaque minima fuga
+      voluptate odit officia, velit facere eius ullam repellendus eum.
+      Voluptatem rerum mollitia, explicabo illo expedita soluta! Placeat eum,
+      fugiat porro accusamus ipsum magnam laborum qui nobis molestiae magni
+      eveniet doloribus, repudiandae facilis voluptatem dolores asperiores? Nam
+      delectus harum eligendi hic voluptatum tempore quibusdam, minima
+      perspiciatis ea ipsam repellendus ut beatae eaque nisi quidem eveniet,
+      explicabo veniam doloremque libero provident, tenetur assumenda saepe
+      temporibus possimus! Consequatur earum facere fugit dolor delectus
       voluptatem non quo culpa accusantium nulla facilis placeat ut, temporibus,
       odit nostrum. Quia magni earum quam mollitia, dolores id atque et
       dignissimos, explicabo omnis similique laborum amet eveniet officiis quasi
@@ -100,5 +132,18 @@
       accusamus eum explicabo ratione odit corporis, eius quasi cum nostrum. Ad,
       modi enim.
     </p>
+    <footer>
+      <div class="container">
+        <div class="item item-1">
+          <h4>Header</h4>
+        </div>
+        <div class="item item-2">
+          <p>Item 2</p>
+        </div>
+        <div class="item item-3">
+          <p>Item 3</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
