--- a/pictures.html
+++ b/pictures.html
@@ -9,20 +9,15 @@
   </head>
   <body>
     <header>
-      <h1>Text</h1>
-      <nav class="main-nav">
-        <div>
-          <a href="./index.html">Home</a>
-        </div>
-        <div>
-          <a href="./contact.html">Contact</a>
-        </div>
-        <div class="active">
-          <a href="./pictures.html"> Pictures</a>
-        </div>
+      <nav class="main-nav" href="./index.html">
+        <a class="inActive" href="./index.html">Hem</a>
+
+        <a class="inActive" href="./contact.html">Kontakta oss</a>
+
+        <a class="active" href="./pictures.html"> Bilder</a>
       </nav>
     </header>
-    <h1>There are no pictures</h1>
+    <h1>Så här ser spelet ut!</h1>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque pariatur
       veniam earum, vitae minima exercitationem expedita, aliquid, quod
