--- a/guide.html
+++ b/guide.html
@@ -4,14 +4,30 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Guide</title>
   </head>
+  <header>
+    <nav class="main-nav">
+      <a class="inActive" href="./index.html">Hem</a>
+      <a class="active" href="./guide.html">Guide</a>
+
+      <a class="inActive" href="./download.html">Ladda ner spelet</a>
+
+      <a class="inActive" href="./contact.html">Kontakta oss</a>
+
+      <a class="inActive" href="./pictures.html">Galleri</a>
+    </nav>
+  </header>
   <body>
     <h1>Hur du spelar spelet</h1>
     <p>
       Först och främst behöver du ladda ner spelet, gör det
       <a href="./download.html">här</a>. <br />
-      När du startar spelet kommer du se
+      När du startar spelet kommer du se en meny. Där finns en knapp där det
+      står tutorial, vilket betyder instruktion eller guide. Där kan du lära dig
+      mer om spelet. När du är färdig med den, gå tillbaka till menyn och tryck
+      sedan på knappen för att starta spelet.
     </p>
   </body>
 </html>
