--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </nav>
     </header>
     <h1>Rule of Division</h1>
-    <div class="quickLinks">
+    <div class="rectangle">
       <h3>Överblick</h3>
       <ul>
         <!--gör de här till genvägar-->
@@ -31,14 +31,18 @@
         <a href="#vadLär">Vad lär vi ut? </a>
       </ul>
       <ul>
+        <a href="#förLär">För lärare</a>
+      </ul>
+      <ul>
         <a href="#undervisning">Hur passar vi in i undervisningen?</a>
       </ul>
     </div>
     <h3 id="intro">Vad handlar spelet om?</h3>
     <p>
-      "Rule of Division" är ett roligt sätt för grundskoleelever att lära sig
+      "Rule of Division" är ett roligt sätt för mellanstadieelever att lära sig
       division. Man lär sig genom att dela tal jämnt genom att hugga monster med
-      svärd.
+      svärd. Vårt mål är att hitta ett roligt sätt för elever att bli bättre på
+      matte!
     </p>
     <div class="image">
       <img src="./Bilder/Skarmbild_3.png" alt="1st Game image" />
@@ -53,9 +57,17 @@
     <div class="image">
       <img src="./Bilder/Division_begrepp.png" alt="2nd image" />
     </div>
+    <h3 id="förLär">För Lärare</h3>
+    <p>
+      Det här spelet är tänkt att användas tillsammans med er vanliga
+      undervisning.
+    </p>
+
     <h3 id="undervisning">Hur passar vi in i undervisningen?</h3>
     <p>
-      Vi kan Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      Vårt spel kan hjälpa till att göra matematik lite roligare. Det skulle
+      kunna fungera som en matteläxa att exempelvis ta sig igenom 10 banor i
+      spelet. Lorem ipsum dolor sit amet consectetur adipisicing elit.
       Voluptatum, fugit provident, rem voluptatibus maxime recusandae tempora
       corrupti neque suscipit ea perferendis magni adipisci explicabo
       dignissimos quasi laudantium repudiandae labore illum repellendus enim
@@ -135,7 +147,7 @@
     <footer>
       <div class="container">
         <div class="item item-1">
-          <h4>Header</h4>
+          <h4>Här kommer det att stå någonting förr eller senare</h4>
         </div>
         <div class="item item-2">
           <p>Item 2</p>
