--- a/pictures.html
+++ b/pictures.html
@@ -9,16 +9,23 @@
   </head>
   <body>
     <header>
-      <nav class="main-nav" href="./index.html">
+      <nav class="main-nav">
         <a class="inActive" href="./index.html">Hem</a>
+        <a class="inActive" href="./guide.html">Guide</a>
+
+        <a class="inActive" href="./download.html">Ladda ner spelet</a>
 
         <a class="inActive" href="./contact.html">Kontakta oss</a>
 
-        <a class="active" href="./pictures.html"> Bilder</a>
+        <a class="active" href="./pictures.html">Galleri</a>
       </nav>
     </header>
     <h1>Så här ser spelet ut!</h1>
+    <div class="image">
+      <img src="./Bilder/Skarmbild_3.png" alt="1st Game image" />
+    </div>
     <p>
+      Som det går att se på bilden håller vi fortfarande på att utveckla spelet.
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque pariatur
       veniam earum, vitae minima exercitationem expedita, aliquid, quod
       consequuntur deserunt laudantium officiis illum! Dolorem, fugiat quasi
