--- a/download.html
+++ b/download.html
@@ -5,9 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ladda ner</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
+  <header>
+    <nav class="main-nav">
+      <a class="inActive" href="./index.html">Hem</a>
+      <a class="inActive" href="./guide.html">Guide</a>
+
+      <a class="active" href="./download.html">Ladda ner spelet</a>
+
+      <a class="inActive" href="./contact.html">Kontakta oss</a>
+
+      <a class="inActive" href="./pictures.html">Galleri</a>
+    </nav>
+  </header>
   <body>
-    <h1>Länkar till att ladda ner spelet:</h1>
+    <h1>
+      Länkar till att ladda ner spelet (det går inte att ladda ner än för det är
+      inte färdigt):
+    </h1>
 
     <h3>Ladda ner för Windows</h3>
     <h3>Ladda ner för Mac</h3>
