--- a/download.html
+++ b/download.html
@@ -19,7 +19,7 @@
       <a class="inActive" href="./pictures.html">Galleri</a>
     </nav>
   </header>
-  <body>
+  <body class="dlBackground">
     <h1>
       Länkar till att ladda ner spelet (det går inte att ladda ner än för det är
       inte färdigt):
