--- a/guide.html
+++ b/guide.html
@@ -22,12 +22,16 @@
   <body>
     <h1>Hur du spelar spelet</h1>
     <p>
-      Först och främst behöver du ladda ner spelet, gör det
-      <a href="./download.html">här</a>. <br />
-      När du startar spelet kommer du se en meny. Där finns en knapp där det
-      står tutorial, vilket betyder instruktion eller guide. Där kan du lära dig
-      mer om spelet. När du är färdig med den, gå tillbaka till menyn och tryck
-      sedan på knappen för att starta spelet.
+      <ul>
+        <li>
+          Först och främst behöver du ladda ner spelet, gör det
+          <a href="./download.html">här.</a>
+          <li>Alternativt kan du spela spelet på webbsidan <a href="https://ruleofdivision.github.io/play">här.</a>        </li>
+        <li>När du startar spelet kommer du se en meny. Där finns en knapp där det
+        står tutorial, vilket betyder instruktion eller guide. Där kan du lära
+        dig mer om spelet.</li> <li>När du är färdig med den, gå tillbaka till menyn och
+        tryck sedan på knappen för att starta spelet.</li>
+      </ul>
     </p>
   </body>
 </html>
