--- a/guide.html
+++ b/guide.html
@@ -10,7 +10,7 @@
   <header>
     <nav class="main-nav">
       <a class="inActive" href="./index.html">Hem</a>
-      <a class="active" href="./guide.html">Guide</a>
+      <a class="active" href="./guide.html">Spela</a>
 
       <a class="inActive" href="./download.html">Ladda ner spelet</a>
 
