--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
   </head>
   <body>
     <header>
-      <img class="tillLQG" src="./Bilder/icon.png" alt="lol" />
       <nav class="main-nav">
+        <img
+          class="tillLQG"
+          src="./Bilder/Skärmbild 2022-04-25 085118.png"
+          alt="lol"
+        />
         <a class="active" href="./index.html">Hem</a>
-        <a class="inActive" href="./guide.html">Guide</a>
+        <a class="inActive" href="./guide.html">Spela</a>
 
         <a class="inActive" href="./download.html">Ladda ner spelet</a>
 
@@ -29,27 +33,27 @@
     <div class="top">
       <div class="rectangle">
         <h3>Överblick</h3>
-        <ul>
-          <!--gör de här till genvägar-->
-          <a href="#intro">Introduktion</a>
-        </ul>
-        <ul>
-          <a href="#vadLär">Vad lär vi ut? </a>
-        </ul>
-        <ul>
-          <a href="#förLär">För lärare</a>
-        </ul>
-        <ul>
-          <a href="#undervisning">Hur passar vi in i undervisningen?</a>
-        </ul>
+        <li>
+          <ul>
+            <!--gör de här till genvägar-->
+            <a href="#intro">Introduktion</a>
+          </ul>
+          <ul>
+            <a href="#vadLär">Vad lär vi ut? </a>
+          </ul>
+          <ul>
+            <a href="#förLär">För lärare</a>
+          </ul>
+          <ul>
+            <a href="#undervisning">Hur passar vi in i undervisningen?</a>
+          </ul>
+        </li>
       </div>
       <div class="nyheter">
         <div class="artikel">
-          <img class src="" alt="Spela nu!" />
           <h4>Webbversionen är ute nu!</h4>
-          >
+          <a href="ruleofdivision.github.io/play">SPELA NU!</a>
         </div>
-        <script></script>
       </div>
     </div>
     <h3 id="intro">Vad handlar spelet om?</h3>
@@ -77,7 +81,6 @@
       Det här spelet är tänkt att användas tillsammans med er vanliga
       undervisning.
     </p>
-
     <h3 id="undervisning">Hur passar vi in i undervisningen?</h3>
     <p>
       Vårt spel kan hjälpa till att göra matematik lite roligare. Det skulle
