--- a/pictures.html
+++ b/pictures.html
@@ -11,7 +11,7 @@
     <header>
       <nav class="main-nav">
         <a class="inActive" href="./index.html">Hem</a>
-        <a class="inActive" href="./guide.html">Guide</a>
+        <a class="inActive" href="./guide.html">Spela</a>
 
         <a class="inActive" href="./download.html">Ladda ner spelet</a>
 
