--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     />
   </head>
   <body>
+    <script src="springyEmojiCursor.js">
+    new springyEmojiCursor({emoji: "➗"});
+    </script>
     <header>
       <nav class="main-nav">
         <img
