--- a/pictures.html
+++ b/pictures.html
@@ -31,5 +31,21 @@
       consequuntur deserunt laudantium officiis illum! Dolorem, fugiat quasi
       nulla tempore libero autem.
     </p>
+    <footer>
+      <h3 class="f">Information</h3>
+      <p class="f">Studion:</p>
+      <a href="https://lqgstudios.github.io/">
+        <img src="./Bilder/Skärmbild 2022-04-25 085118.png" alt="LQG" />
+      </a>
+      <br />
+      <a href="https://lqgstudios.github.io/">https://lqgstudios.github.io/</a>
+      <h3 class="f">Utvecklarna:</h3>
+      <p class="f">
+        <br />
+        Anton Lamberth, Max Wasserman
+      </p>
+
+      <div><p class="f" style="font-size: 1rem">2022</p></div>
+    </footer>
   </body>
 </html>
