--- a/contact.html
+++ b/contact.html
@@ -64,5 +64,21 @@
     <p>
       Vi är tacksamma för all feedback ni skickar efter att ha testat spelet
     </p>
+    <footer>
+      <h3 class="f">Information</h3>
+      <p class="f">Studion:</p>
+      <a href="https://lqgstudios.github.io/">
+        <img src="./Bilder/Skärmbild 2022-04-25 085118.png" alt="LQG" />
+      </a>
+      <br />
+      <a href="https://lqgstudios.github.io/">https://lqgstudios.github.io/</a>
+      <h3 class="f">Utvecklarna:</h3>
+      <p class="f">
+        <br />
+        Anton Lamberth, Max Wasserman
+      </p>
+
+      <div><p class="f" style="font-size: 1rem">2022</p></div>
+    </footer>
   </body>
 </html>
