--- a/download.html
+++ b/download.html
@@ -25,7 +25,7 @@
       inte färdigt):
     </h1>
 
-    <h3>Ladda ner för Windows</h3>
+    <a href="RuleOfDivision.rar"><h3>Ladda ner för Windows</h3></a>
     <h3>Ladda ner för Mac</h3>
     <footer>
       <h3 class="f">Information</h3>
